added updateField to the fields section
