# controllers/FieldsService.js
@@ -46,6 +46,7 @@ exports.sourcesSourceIdFieldsGet = function(args, res, next) {
   * fieldType (String)
   * analyse (Boolean)
   * key (Boolean)
+  * updateField (Boolean)
   * created (Date)
   * updated (Date)
   **/
